--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "author": "parthiv menon",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
