--- a/whoami/package.json
+++ b/whoami/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "array-shuffle": "^2.0.0",
-    "feather-icons-react": "^0.4.1",
     "halfmoon": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "react-particles-js": "^3.4.1",
+    "react-reveal": "^1.2.2",
+    "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
