--- a/whoami/package.json
+++ b/whoami/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "array-shuffle": "^2.0.0",
     "halfmoon": "^1.1.1",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
@@ -30,7 +31,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
