--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd backend && yarn start",
     "client": "cd whoami && yarn start",
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "npm i nodemon && yarn server && cd whoami && yarn && yarn run build"
+    "heroku-postbuild": "cd whoami && yarn && yarn run build cd .."
   },
   "repository": {
     "type": "git",
