--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "author": "parthiv menon",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
