--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd backend && yarn start",
     "client": "cd whoami && yarn start",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd whoami && yarn && yarn build" 
+    "dev-start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npm run server",
+    "heroku-postbuild": "cd whoami && yarn && yarn build " 
   },
   "repository": {
     "type": "git",
