--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd backend && yarn start",
     "client": "cd whoami && yarn start",
     "dev-start": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "cd backend && yarn && yarn start", 
+    "start": "(cd backend && yarn && yarn start) && (cd whoami && yarn && yarn start)", 
     "heroku-postbuild": "cd whoami && yarn && yarn build" 
   },
   "repository": {
