--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd backend && yarn start",
     "client": "cd whoami && yarn start",
-    "dev-start": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "(cd backend && yarn && yarn start) && (cd whoami && yarn && yarn start)", 
+    "dev-start": "NODE_ENV=dev concurrently \"npm run server\" \"npm run client\"",
+    "start": "NODE_ENV=production && (cd backend && yarn && yarn start) && (cd whoami && yarn && yarn start)", 
     "heroku-postbuild": "cd whoami && yarn && yarn build" 
   },
   "repository": {
