--- a/whoami/package.json
+++ b/whoami/package.json
@@ -6,21 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "array-shuffle": "^2.0.0",
-    "halfmoon": "^1.1.1",
+    "gh-pages": "^3.2.1",
     "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
-    "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reacthalfmoon": "^0.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
