--- a/whoami/public/manifest.json
+++ b/whoami/public/manifest.json
@@ -1,18 +1,7 @@
 {
   "short_name": "Parthiv Menon",
   "name": "Parthiv Menon",
-  "icons": [
-    {
-        "src": "/android-chrome-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-    },
-    {
-        "src": "/android-chrome-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-    }
-  ],
+  "icons": [],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
