--- a/whoami/package.json
+++ b/whoami/package.json
@@ -1,7 +1,8 @@
 {
   "name": "whoami",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://Parthiv-M.github.io/whoami",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
