--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "http-proxy-middleware": "^1.0.6",
+    "confetti-js": "^0.0.18",
     "react": "^17.0.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
